CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Tulip-plugin-grid3d CXX)

FIND_PACKAGE(TULIP3 REQUIRED)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})


SET(PLUGIN_NAME "Grid3D-${TULIP_PLUGIN_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED Grid3D.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARY})
INSTALL(TARGETS ${PLUGIN_NAME} DESTINATION ${TULIP_PLUGINS_PATH})

ADD_EXECUTABLE(test test.cpp)
TARGET_LINK_LIBRARIES(test ${TULIP_LIBRARY})
