CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Tulip-plugin-grid3d CXX)

FIND_PACKAGE(TULIP REQUIRED)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})


SET(PLUGIN_NAME "Grid3D-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED Grid3D.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES})
INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})


ADD_EXECUTABLE(test test.cpp)
TARGET_LINK_LIBRARIES(test ${TULIP_LIBRARIES})
